--- a/TelaCentral.html
+++ b/TelaCentral.html
@@ -9,11 +9,11 @@
 <body>
     <a href="#"><img src="imagens/Mascara_GsWolf101.png" alt="">Imagem mascara</a>
     <figure>
-        <img src="" alt="Instagram">
-        <img src="" alt="Twitch">
-        <img src="" alt="Tiktok">
-        <img src="" alt="Discord">
-        <img src="" alt="Youtube">
+        <img src="imagens/img-teste" alt="Instagram">
+        <img src="imagens/img-teste" alt="Twitch">
+        <img src="imagens/img-teste" alt="Tiktok">
+        <img src="imagens/img-teste" alt="Discord">
+        <img src="imagens/img-teste" alt="Youtube">
     </figure>
 </body>
 </html>
