--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <a href="#"><img src="imagens/Mascara_GsWolf101.png" alt="">Imagem mascara</a>
+    <h2>Redes sociais</h2>
     <figure>
         <img src="imagens/img-teste" alt="Instagram">
         <img src="imagens/img-teste" alt="Twitch">
