--- a/index.html
+++ b/index.html
@@ -7,14 +7,17 @@
     <link rel="stylesheet" href="estilo1.css"> 
 </head>
 <body>
+    <div id="Centro">
+
+    </div>
     <a href="#"><img src="imagens/Mascara_GsWolf101.png" alt="">Imagem mascara</a>
     <h2>Redes sociais</h2>
     <figure>
-        <img src="imagens/img-teste" alt="Instagram">
-        <img src="imagens/img-teste" alt="Twitch">
-        <img src="imagens/img-teste" alt="Tiktok">
-        <img src="imagens/img-teste" alt="Discord">
-        <img src="imagens/img-teste" alt="Youtube">
+        <img src="imagens/img-teste.png" alt="Instagram">
+        <img src="imagens/img-teste.png" alt="Twitch">
+        <img src="imagens/img-teste.png" alt="Tiktok">
+        <img src="imagens/img-teste.png" alt="Discord">
+        <img src="imagens/img-teste.png" alt="Youtube">
     </figure>
 </body>
 </html>
