--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </div>
     <a href="#"><img src="imagens/Mascara_GsWolf101.png" alt="">Imagem mascara</a>
     <h2>Redes sociais</h2>
-    <figure>
+    <figure id="redes_sociais">
         <img src="imagens/img-teste.png" alt="Instagram">
         <img src="imagens/img-teste.png" alt="Twitch">
         <img src="imagens/img-teste.png" alt="Tiktok">
