--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
     <figure id="redes_sociais">
         <img src="imagens/img-teste.png" alt="Instagram">
         <a href="https://www.twitch.tv/gswolf101" target="_blank" rel="noopener" ><img src="imagens/img-teste.png" alt="Twitch"></a>
-        <img src="imagens/img-teste.png" alt="Tiktok">
+        <a href="https://www.tiktok.com/@gswolf101" target="_blank" rel="noopener"><img src="imagens/img-teste.png" alt="Tiktok"></a>
         <img src="imagens/img-teste.png" alt="Discord">
         <img src="imagens/img-teste.png" alt="Youtube">
+
+        
     </figure>
 </body>
 </html>
