--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h2>Redes sociais</h2>
     <figure id="redes_sociais">
         <img src="imagens/img-teste.png" alt="Instagram">
-        <a href="https://www.twitch.tv/gswolf101" target="_blank" rel="noopener" ><img src="imagens/img-teste.png" alt="Twitch"></a>
+        <a href="https://www.twitch.tv/gswolf101" target="_blank" rel="noopener" ><img src="imagens/Logotwitch.png" alt="Twitch"></a>
         <a href="https://www.tiktok.com/@gswolf101" target="_blank" rel="noopener"><img src="imagens/Logottk.png" alt="Tiktok"></a>
         <img src="imagens/img-teste.png" alt="Discord">
         <img src="imagens/img-teste.png" alt="Youtube">
