--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <a href="#"><img src="imagens/Mascara_GsWolf101.png" alt="">Imagem mascara</a>
     <h2>Redes sociais</h2>
     <figure id="redes_sociais">
-        <a href="#" target="_blank" rel="noopener"> <img src="imagens/Logoinstagram.png" alt="Instagram"></a>
+        <a href="https://www.instagram.com/gswolf101/" target="_blank" rel="noopener"> <img src="imagens/Logoinstagram.png" alt="Instagram"></a>
         <a href="https://www.twitch.tv/gswolf101" target="_blank" rel="noopener" ><img src="imagens/Logotwitch.png" alt="Twitch"></a>
         <a href="https://www.tiktok.com/@gswolf101" target="_blank" rel="noopener"><img src="imagens/Logottk.png" alt="Tiktok"></a>
         <img src="imagens/img-teste.png" alt="Discord">
