--- a/index.html
+++ b/index.html
@@ -16,10 +16,8 @@
         <a href="#" target="_blank" rel="noopener"> <img src="imagens/Logoinstagram.png" alt="Instagram"></a>
         <a href="https://www.twitch.tv/gswolf101" target="_blank" rel="noopener" ><img src="imagens/Logotwitch.png" alt="Twitch"></a>
         <a href="https://www.tiktok.com/@gswolf101" target="_blank" rel="noopener"><img src="imagens/Logottk.png" alt="Tiktok"></a>
-        <img src="imagens/img-teste.png" alt="Discord">
-        <img src="imagens/img-teste.png" alt="Youtube">
-
-        
+        <a href="#" target="_blank" rel="noopener"><img src="imagens/Logoyoutube.png" alt="Youtube"></a>
+       <img src="imagens/img-teste.png" alt="Discord">
     </figure>
 </body>
 </html>
