--- a/index.html
+++ b/index.html
@@ -7,17 +7,19 @@
     <link rel="stylesheet" href="estilo1.css"> 
 </head>
 <body>
-    <div id="Centro">
 
+    <div id="Centro">
+        <a href="#"><img src="imagens/Mascara_GsWolf101.png" alt="Imagem mascara"></a>
+        <br class="br">
+        <h2>Redes sociais</h2>
+        <figure id="redes_sociais">
+            <a href="https://www.instagram.com/gswolf101/" target="_blank" rel="noopener"> <img src="imagens/Logoinstagram.png" alt="Instagram"></a>
+            <a href="https://www.twitch.tv/gswolf101" target="_blank" rel="noopener" ><img src="imagens/Logotwitch.png" alt="Twitch"></a>
+            <a href="https://www.tiktok.com/@gswolf101" target="_blank" rel="noopener"><img src="imagens/Logottk.png" alt="Tiktok"></a>
+            <a href="#" target="_blank" rel="noopener"><img src="imagens/Logoyoutube.png" alt="Youtube"></a>
+        <img src="imagens/img-teste.png" alt="Discord">
+        </figure>
+        <br class="br">
     </div>
-    <a href="#"><img src="imagens/Mascara_GsWolf101.png" alt="Imagem mascara"></a>
-    <h2>Redes sociais</h2>
-    <figure id="redes_sociais">
-        <a href="https://www.instagram.com/gswolf101/" target="_blank" rel="noopener"> <img src="imagens/Logoinstagram.png" alt="Instagram"></a>
-        <a href="https://www.twitch.tv/gswolf101" target="_blank" rel="noopener" ><img src="imagens/Logotwitch.png" alt="Twitch"></a>
-        <a href="https://www.tiktok.com/@gswolf101" target="_blank" rel="noopener"><img src="imagens/Logottk.png" alt="Tiktok"></a>
-        <a href="#" target="_blank" rel="noopener"><img src="imagens/Logoyoutube.png" alt="Youtube"></a>
-       <img src="imagens/img-teste.png" alt="Discord">
-    </figure>
 </body>
 </html>
