--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <div id="Centro">
-        <a href="#"><img src="imagens/Mascara_GsWolf101.png" alt="Imagem mascara"></a>
+        <a href="#" id="imgmascara"><img src="imagens/Mascara_GsWolf101.png" alt="Imagem mascara"></a>
         <br class="br">
         <h2>Redes sociais</h2>
         <figure id="redes_sociais">
