--- a/index.html
+++ b/index.html
@@ -20,5 +20,20 @@
         </figure>
         <br class="br">
     </div>
+
+<!-- SEPARAÇÃO DE BLOCOS-->
+
+    <div id="esquerda">
+        <h2>Sobre o meu pc</h2>
+        <ul>
+            <li><p class="tipo">Marca</p><p class="especificacao">Avell</p></li>
+            <li><p class="tipo">Armazenamento</p><p class="especificacao">XXX</p></li>
+            <li><p class="tipo">Tela</p><p class="especificacao">144Hz</p></li>
+            <li><p class="tipo">Processador</p><p class="especificacao">i5 12h</p></li>
+            <li><p class="tipo">Placa de vídeo</p><p class="especificacao">RTX3040</p></li>
+            <li><p class="tipo">XXX</p><p class="especificacao">XXX</p></li>
+            <li><p class="tipo">XXX</p><p class="especificacao">XXX</p></li>
+        </ul>
+    </div>
 </body>
 </html>
