--- a/index.html
+++ b/index.html
@@ -11,15 +11,13 @@
     
     <div id="esquerda">
         <h2>Sobre o meu pc</h2>
-        <ul>
-            <li><p class="tipo">Marca</p><p class="especificacao">Avell</p></li>
-            <li><p class="tipo">Armazenamento</p><p class="especificacao">XXX</p></li>
-            <li><p class="tipo">Tela</p><p class="especificacao">144Hz</p></li>
-            <li><p class="tipo">Processador</p><p class="especificacao">i5 12h</p></li>
-            <li><p class="tipo">Placa de vídeo</p><p class="especificacao">RTX3040</p></li>
-            <li><p class="tipo">XXX</p><p class="especificacao">XXX</p></li>
-            <li><p class="tipo">XXX</p><p class="especificacao">XXX</p></li>
-        </ul>
+        <p class="tipo">Marca</p><p class="especificacao">Avell</p>
+        <p class="tipo">Armazenamento</p><p class="especificacao">XXX</p>
+        <p class="tipo">Tela</p><p class="especificacao">144Hz</p>
+        <p class="tipo">Processador</p><p class="especificacao">i5 12h</p>
+        <p class="tipo">Placa de vídeo</p><p class="especificacao">RTX3040</p>
+        <p class="tipo">XXX</p><p class="especificacao">XXX</p>
+        <p class="tipo">XXX</p><p class="especificacao">XXX</p>
     </div>
 
     <!-- SEPARAÇÃO DE BLOCOS-->
