--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
         <h2>Sobre o meu pc</h2>
         <p class="tipo">Marca:      </p><p class="especificacao">Avell</p>
         <br> <hr>
-        <p class="tipo">Armazenamento:      </p><p class="especificacao">XXX</p>
+        <p class="tipo">Armazenamento:      </p><p class="especificacao">NVME 500GB</p>
         <br> <hr>
         <p class="tipo">Tela:      </p><p class="especificacao">144Hz</p>
         <br> <hr>
-        <p class="tipo">Processador:      </p><p class="especificacao">i5 12h</p>
+        <p class="tipo">Processador:      </p><p class="especificacao">i5 12650H    </p>
         <br> <hr>
-        <p class="tipo">Placa de vídeo:      </p><p class="especificacao">RTX3040</p>
+        <p class="tipo">Placa de vídeo:      </p><p class="especificacao">RTX3050 Black</p>
         <br> <hr>
-        <p class="tipo">XXX:      </p><p class="especificacao">XXX</p>
+        <p class="tipo">Memória:      </p><p class="especificacao">16 GB (2x8)</p>
         <br> <hr>
         <p class="tipo">XXX:      </p><p class="especificacao">XXX</p>
         <br> 
