--- a/index.html
+++ b/index.html
@@ -10,21 +10,22 @@
 
     
     <div id="esquerda">
-        <h2>Sobre o meu pc</h2>
+        <fieldset>
+            <h2>Sobre o meu pc</h2>
         <p class="tipo">Marca:      </p><p class="especificacao">Avell</p>
         <br> <hr>
-        <p class="tipo">Armazenamento:      </p><p class="especificacao">NVME 500GB</p>
+        <p class="tipo">Armazenamento:      </p><p class="especificacao">XXX</p>
         <br> <hr>
         <p class="tipo">Tela:      </p><p class="especificacao">144Hz</p>
         <br> <hr>
-        <p class="tipo">Processador:      </p><p class="especificacao">i5 12650H    </p>
+        <p class="tipo">Processador:      </p><p class="especificacao">i5 12h</p>
         <br> <hr>
-        <p class="tipo">Placa de vídeo:      </p><p class="especificacao">RTX3050 Black</p>
-        <br> <hr>
-        <p class="tipo">Memória:      </p><p class="especificacao">16 GB (2x8)</p>
+        <p class="tipo">Placa de vídeo:      </p><p class="especificacao">RTX3040</p>
         <br> <hr>
         <p class="tipo">XXX:      </p><p class="especificacao">XXX</p>
-        <br> 
+        <br> <hr>
+        <p class="tipo">XXX:      </p><p class="especificacao">XXX</p>
+        </fieldset>
     </div>
 
     <!-- SEPARAÇÃO DE BLOCOS-->
@@ -40,6 +41,10 @@
             <a href="#" target="_blank" rel="noopener"><img src="imagens/Logoyoutube.png" alt="Youtube"></a>
         </figure>
         <br class="br">
+    </div>
+
+    <div id="Centro2">
+        
     </div>
 
 
