--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     
     <div id="esquerda">
-        <fieldset>
+        <fieldset border ="2">
             <h2>Sobre o meu pc</h2>
         <p class="tipo">Marca:      </p><p class="especificacao">Avell</p>
         <br> <hr>
