--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GsWolf101 🐺 </title>
+    <link rel="icon" type="image/x-icon" href="imagens/Mascara_GsWolf101.png">
     <link rel="stylesheet" href="estilo1.css"> 
 </head>
 <body>
