--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GsWolf101</title>
-    <link rel="icon" type="image/x-icon" href="imagens/Mascara_GsWolf101.png">
+    <title>GsWolf101 🐺 </title>
     <link rel="stylesheet" href="estilo1.css"> 
 </head>
 <body>
@@ -38,10 +37,10 @@
             <a href="#" target="_blank" rel="noopener"><img src="imagens/Logoyoutube.png" alt="Youtube"></a>
         </figure>
         <br class="br">
-    </div>
+        <div id="Centro2">
+            <input type="text" name="name" id="name" placeholder="Teste" maxlength="50" size="50">
 
-    <div id="Centro2">
-        
+        </div>
     </div>
 
 
