--- a/index.html
+++ b/index.html
@@ -38,9 +38,14 @@
         </figure>
         <br class="br">
         <div id="Centro2">
-            <input type="text" name="name" id="name" placeholder="Teste" maxlength="40" size="40">
-
+            <input type="text" name="name" id="name" placeholder="Teste" maxlength="50" size="50">
+            <div>
+                <label for="">opções</label>
+                <input type="radio" name="opção" id="1">
+                
+            </div>
         </div>
+
     </div>
 
 
