--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
             <input type="text" name="name" id="name" placeholder="Teste" maxlength="50" size="50">
             <div>
                 <label for="">opções</label>
-                <input type="radio" name="opção" id="1">
+                <input type="radio" name="id1" id="1">
+                <input type="radio" name="id2" id="2">
+                <input type="radio" name="id3" id="3">
+                <input type="radio" name="id1" id="1">
                 
             </div>
         </div>
