--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </figure>
         <br class="br">
         <div id="Centro2">
-            <input type="text" name="name" id="name" placeholder="Teste" maxlength="50" size="50">
+            <input type="text" name="name" id="1" placeholder="Teste" maxlength="50" size="50">
             <div>
                 <label for="">opções</label>
                 <input type="radio" name="id1" id="1">
