--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GsWolf101 🐺 </title>
+    <title>GsWolf101</title>
     <link rel="stylesheet" href="estilo1.css"> 
 </head>
 <body>
@@ -37,11 +37,9 @@
             <a href="#" target="_blank" rel="noopener"><img src="imagens/Logoyoutube.png" alt="Youtube"></a>
         </figure>
         <br class="br">
-        <div id="Centro2">
-
-
+        <div id="botão discord">
+            <p>Entre na minha comunidade do discord!</p>
         </div>
-
     </div>
 
 
