--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <a href="https://www.tiktok.com/@gswolf101" target="_blank" rel="noopener"><img src="imagens/Logottk.png" alt="Tiktok"></a>
             <a href="#" target="_blank" rel="noopener"><img src="imagens/Logoyoutube.png" alt="Youtube"></a>
         </figure>
-        <br class="br">
+        <br class="botaodc">
         <div id="botão discord">
             <p>Entre na minha comunidade do discord!</p>
         </div>
