--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
         </figure>
         <br class="botaodc">
         <div id="botão discord">
-            <p>Entre na minha comunidade do discord!</p>
+            <a href="https://discord.gg/tKrRVKBxh5" id="botão discord">Entre para a Alcateia!!</a>
+            
         </div>
     </div>
 
