--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             <a href="https://www.tiktok.com/@gswolf101" target="_blank" rel="noopener"><img src="imagens/Logottk.png" alt="Tiktok"></a>
             <a href="#" target="_blank" rel="noopener"><img src="imagens/Logoyoutube.png" alt="Youtube"></a>
         </figure>
+        <hr class="separa">
         <br class="botaodc">
         <div id="botão discord">
             <a href="https://discord.gg/tKrRVKBxh5" id="botão discord">Entre para a Alcateia!!</a>
