--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
         </div>
     </div>
 
-
+    <div id="esquerda">
+        <a href="https://pt.namemc.com/profile/GsWolf101.1"> <img src="" alt=""></a>
+    </div>
 
 </body>
 </html>
