--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </div>
 
     <div id="esquerda">
-        <a href="https://pt.namemc.com/profile/GsWolf101.1"> <img src="imagens/i" alt="imagens skin"></a>
+        <a href="https://pt.namemc.com/profile/GsWolf101.1"> <img src="imagen/skin.jpeg" alt="imagens skin"></a>
     </div>
 
 </body>
