--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
     </div>
 
-    <div id="esquerda">
+    <div id="direita">
         <a href="https://pt.namemc.com/profile/GsWolf101.1"> <img src="imagens/skin.jpeg" alt="imagens skin"></a>
     </div>
 
