--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </div>
 
     <div id="direita">
-        <a href="https://pt.namemc.com/profile/GsWolf101.1"> <img src="imagens/skin.jpeg" alt="imagens skin"></a>
+        <a href="https://pt.namemc.com/profile/GsWolf101.1" target="_blank" rel="noopener"> <img src="imagens/skin.jpeg" alt="imagens skin" id="skin"></a>
     </div>
 
 </body>
