--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     </div>
 
     <div id="direita">
+        <h2>Minha Skin</h2>
         <a href="https://pt.namemc.com/profile/GsWolf101.1" target="_blank" rel="noopener"> <img src="imagens/skin.jpeg" alt="imagens skin" id="skin"></a>
     </div>
 
