--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 
     <div id="direita">
         <h2>Minha Skin</h2>
+        <p>Você pode ver mais sobre as skins que ja usei clicando na imagem!!</p>
         <a href="https://pt.namemc.com/profile/GsWolf101.1" target="_blank" rel="noopener"> <img src="imagens/skin.jpeg" alt="imagens skin" id="skin"></a>
     </div>
 
