--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
 
-    
-    <div id="esquerda">
+        <!-- BLOCO ESQUERDA 1 -->
+
+    <div id="esquerda1">
             <h2>Sobre o meu pc</h2>
         <p class="tipo">Marca:      </p><p class="especificacao">Avell</p>
         <hr>
@@ -24,7 +25,20 @@
         <p class="tipo">Memória:      </p><p class="especificacao">16GB (2x8)</p>
     </div>
 
-    <!-- SEPARAÇÃO DE BLOCOS-->
+    <!-- BLOCO ESQUERDA 2 -->
+
+        <div id="esquerda2">
+            <h2>Sobre o meu pc</h2>
+        <p class="tipo">Mouse:      </p><p class="especificacao">Razer Deathadder Essential </p>
+        <hr>
+        <p class="tipo">Fone e Microfone:      </p><p class="especificacao">Headset Gamer Redragon Zeus Pro Preto Sem Fio 7.1 H510-PRO </p>
+        <hr>
+        <p class="tipo">:      </p><p class="especificacao"></p>
+        <hr>
+
+    </div>
+
+    <!-- BLOCO CENTRO -->
 
     <div id="Centro">
         <a href="#" id="imgmascara"><img src="imagens/Mascara_GsWolf101.png" alt="Imagem mascara"></a>
@@ -42,11 +56,15 @@
         </div>
     </div>
 
+    <!-- BLOCO DIREITA 1 -->
+
     <div id="direita">
         <h2>Minha Skin</h2>
-        <p>Você pode ver mais sobre as skins que ja usei clicando na imagem!!</p>
+        <p>Você pode ver mais sobre as skins que usei clicando na imagem!!</p>
         <a href="https://pt.namemc.com/profile/GsWolf101.1" target="_blank" rel="noopener"> <img src="imagens/skin.jpeg" alt="imagens skin" id="skin"></a>
     </div>
 
 </body>
 </html>
+
+
