--- a/index.html
+++ b/index.html
@@ -11,18 +11,35 @@
         <!-- BLOCO ESQUERDA 1 -->
 
     <div id="esquerda1">
+        <div id="meupc">
+                <p class="tipo">Marca:      </p><p class="especificacao">Avell</p>
+            <hr>
+            <p class="tipo">Tela:      </p><p class="especificacao">144Hz</p>
+            <hr>
+            <p class="tipo">Processador:      </p><p class="especificacao">i7 12650h</p>
+            <hr>
+            <p class="tipo">Placa de vídeo:      </p><p class="especificacao">RTX3050 Black</p>
+            <hr>
+            <p class="tipo">Armazenamento:      </p><p class="especificacao">NVME 500GB</p>
+            <hr>
+            <p class="tipo">Memória:      </p><p class="especificacao">16GB (2x8)</p>
+        </div>
+        <h2>Sobre o meu pc</h2>
+
+    
+    </div>
+
+    <!-- BLOCO ESQUERDA 2 -->
+
+        <div id="esquerda2">
             <h2>Sobre o meu pc</h2>
-        <p class="tipo">Marca:      </p><p class="especificacao">Avell</p>
+        <p class="tipo">Mouse:      </p><p class="especificacao">Razer Deathadder Essential </p>
         <hr>
-        <p class="tipo">Tela:      </p><p class="especificacao">144Hz</p>
+        <p class="tipo">Fone e Microfone:      </p><p class="especificacao">Headset Gamer Redragon Zeus Pro Preto Sem Fio 7.1 H510-PRO </p>
         <hr>
-        <p class="tipo">Processador:      </p><p class="especificacao">i7 12650h</p>
+        <p class="tipo">:      </p><p class="especificacao"></p>
         <hr>
-        <p class="tipo">Placa de vídeo:      </p><p class="especificacao">RTX3050 Black</p>
-        <hr>
-        <p class="tipo">Armazenamento:      </p><p class="especificacao">NVME 500GB</p>
-        <hr>
-        <p class="tipo">Memória:      </p><p class="especificacao">16GB (2x8)</p>
+
     </div>
 
     <!-- BLOCO CENTRO -->
