--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
     <div id="esquerda1">
         <div id="meupc">
-                <p class="tipo">Marca:      </p><p class="especificacao">Avell</p>
+            <h2>Sobre o meu pc</h2>
+            <p class="tipo">Marca:      </p><p class="especificacao">Avell</p>
             <hr>
             <p class="tipo">Tela:      </p><p class="especificacao">144Hz</p>
             <hr>
