--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 
     <div id="esquerda1">
         <div id="meupc">
-            <h2>Sobre o meu pc</h2>
-            <p class="tipo">Marca:      </p><p class="especificacao">Avell</p>
+                <p class="tipo">Marca:      </p><p class="especificacao">Avell</p>
             <hr>
             <p class="tipo">Tela:      </p><p class="especificacao">144Hz</p>
             <hr>
@@ -25,7 +24,17 @@
             <hr>
             <p class="tipo">Memória:      </p><p class="especificacao">16GB (2x8)</p>
         </div>
+        <div id="perifericos">
+            <h2>Sobre o meu pc</h2>
+            <p class="tipo">Mouse:      </p><p class="especificacao">Razer Deathadder Essential </p>
+            <hr>
+            <p class="tipo">Fone e Microfone:      </p><p class="especificacao">Headset Gamer Redragon Zeus Pro Preto Sem Fio 7.1 H510-PRO </p>
+            <hr>
+            <p class="tipo">:      </p><p class="especificacao"></p>
+            <hr>
+        </div>
 
+    
     </div>
 
 
@@ -43,7 +52,34 @@
         <br class="botaodc">
         <div id="botão discord">
             <a href="https://discord.gg/tKrRVKBxh5" id="botão discord">Entre para a Alcateia!!</a>
-            
+        </div>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <div id="contato">
+            <h2>E-mail</h2>
+            <h1>gswolf101@gmail.com</h1>
         </div>
     </div>
 
