--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
     <div id="esquerda1">
         <div id="meupc">
-                <p class="tipo">Marca:      </p><p class="especificacao">Avell</p>
+            <h2>Sobre o meu notebook</h2>
+            <p class="tipo">Marca:      </p><p class="especificacao">Avell</p>
             <hr>
             <p class="tipo">Tela:      </p><p class="especificacao">144Hz</p>
             <hr>
@@ -25,7 +26,7 @@
             <p class="tipo">Memória:      </p><p class="especificacao">16GB (2x8)</p>
         </div>
         <div id="perifericos">
-            <h2>Sobre o meu pc</h2>
+            <h2>Meus equipamentos</h2>
             <p class="tipo">Mouse:      </p><p class="especificacao">Razer Deathadder Essential </p>
             <hr>
             <p class="tipo">Fone e Microfone:      </p><p class="especificacao">Headset Gamer Redragon Zeus Pro Preto Sem Fio 7.1 H510-PRO </p>
