--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <hr>
             <p class="tipo">Placa de vídeo:      </p><p class="especificacao">RTX3050 Black</p>
             <hr>
-            <p class="tipo">Armazenamento:      </p><p class="especificacao">NVME 500GB</p>
+            <p class="tipo">Espaço:      </p><p class="especificacao">NVME 500GB</p>
             <hr>
             <p class="tipo">Memória:      </p><p class="especificacao">16GB (2x8)</p>
         </div>
