--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
             <a href="https://www.tiktok.com/@gswolf101" target="_blank" rel="noopener"><img src="imagens/Logottk.png" alt="Tiktok"></a>
             <a href="#" target="_blank" rel="noopener"><img src="imagens/Logoyoutube.png" alt="Youtube"></a>
         </figure>
-        <br class="botaodc">
-        <div id="botão discord">
+        <div id="botãodc">
             <a href="https://discord.gg/tKrRVKBxh5" id="botão discord"><img src="imagens/botaodc.png" alt="Imagem botão do discord></a>
         </div>
         <br>
