--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
             <hr>
             <p class="tipo">Placa de vídeo:      </p><p class="especificacao">RTX3050 Black</p>
             <hr>
-            <p class="tipo">Armazenamento:      </p><p class="especificacao">NVME 500GB</p>
+            <p class="tipo">Espaço:      </p><p class="especificacao">NVME 500GB</p>
             <hr>
             <p class="tipo">Memória:      </p><p class="especificacao">16GB (2x8)</p>
         </div>
         <div id="perifericos">
-            <h2>Meus equipamentos</h2>
+            <h2>Extras</h2>
             <p class="tipo">Mouse:      </p><p class="especificacao">Razer Deathadder Essential </p>
             <hr>
             <p class="tipo">Fone e Microfone:      </p><p class="especificacao">Headset Gamer Redragon Zeus Pro Preto Sem Fio 7.1 H510-PRO </p>
