--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <a href="#" target="_blank" rel="noopener"><img src="imagens/Logoyoutube.png" alt="Youtube"></a>
         </figure>
         <div id="botãodc">
-            <a href="https://discord.gg/tKrRVKBxh5" id="botão discord"><img src="imagens/botaodc.png" alt="Imagem botão do discord></a>
+            <a href="https://discord.gg/tKrRVKBxh5" id="botão discord" target="_blank" rel="noopener"><img src="imagens/botaodc.png" alt="Imagem botão do discord></a>
         </div>
         <br>
         <br>
@@ -93,5 +93,3 @@
 
 </body>
 </html>
-
-
