--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
             <a href="https://www.tiktok.com/@gswolf101" target="_blank" rel="noopener"><img src="imagens/Logottk.png" alt="Tiktok"></a>
             <a href="#" target="_blank" rel="noopener"><img src="imagens/Logoyoutube.png" alt="Youtube"></a>
         </figure>
-        <div id="botãodc">
-            <a href="https://discord.gg/tKrRVKBxh5" id="botãodc" target="_blank" rel="noopener"><img src="imagens/botaodc.png" alt="Imagem botão do discord></a>
+        <div>
+            <a href="https://discord.gg/tKrRVKBxh5" id="botãodc" target="_blank" rel="noopener"><img src="imagens/botaodc.png" alt="Imagem botão do discord"></a>
         </div>
         <br>
         <br>
