--- a/index.html
+++ b/index.html
@@ -53,6 +53,12 @@
         <div>
             <a href="https://discord.gg/tKrRVKBxh5" id="botãodc" target="_blank" rel="noopener"><img src="imagens/botaodc.png" alt="Imagem botão do discord"></a>
         </div>
+        <div id="livepix">
+            <figure>
+                <a href="#"><img src="imagens/img-teste.png" alt="Qrcode"></a>
+                <p>Ajude o Wolf a melhorar o setup e trazer novos conteúdos para as lives e vídeos</p>
+            </figure>
+        </div>
         <br>
         <br>
         <br>
