--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <a href="#" target="_blank" rel="noopener"><img src="imagens/Logoyoutube.png" alt="Youtube"></a>
         </figure>
         <div>
-            <a href="https://discord.gg/tKrRVKBxh5" id="botãodc" target="_blank" rel="noopener"><img src="imagens/botaodc.png" alt="Imagem botão do discord"></a>
+            <a href="https://discord.gg/tKrRVKBxh5" id="botaodc" target="_blank" rel="noopener"><img src="imagens/botaodc.png" alt="Imagem botão do discord"></a>
         </div>
         <div id="livepix">
             <figure>
