--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
         <div id="livepix">
             <figure>
-                <a href="https://livepix.gg/gswolf101"><img src="imagens/img-teste.png" alt="Qrcode"></a>
+                <a href="https://livepix.gg/gswolf101" target="_blank" rel="noopener"><img src="imagens/img-teste.png" alt="Qrcode"></a>
                 <p>Ajude o Wolf a melhorar o setup e trazer novos conteúdos para as lives e vídeos</p>
             </figure>
         </div>
