--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div>
             <a href="https://discord.gg/tKrRVKBxh5" id="botaodc" target="_blank" rel="noopener"><img src="imagens/botaodc.png" alt="Imagem botão do discord"></a>
         </div>
-        <br id="espaco">
+        <hr id="espaco">
         <div id="livepix">
             <figure>
                 <a href="https://livepix.gg/gswolf101" target="_blank" rel="noopener"><img src="imagens/img-teste.png" alt="Qrcode"></a>
