--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                 <a href="https://livepix.gg/gswolf101" target="_blank" rel="noopener"><img src="imagens/img-teste.png" alt="Qrcode"></a>
                 <p>Ajude o Wolf a melhorar o setup e trazer novos conteúdos para as lives e vídeos</p>
             </figure>
+        <hr id="espaco">
         </div>
         <br>
         <br>
