--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                 <a href="https://livepix.gg/gswolf101" target="_blank" rel="noopener"><img src="imagens/img-teste.png" alt="Qrcode"></a>
             </figure>
                 <p>Ajude o Wolf a melhorar o setup e trazer novos conteúdos para as lives e vídeos</p>
+             <!-- <iframe src="" frameborder="0"></iframe>  (widget da meta do livepix usar depois)-->   
         </div>
         <hr id="espaco">
         <br>
