--- a/index.html
+++ b/index.html
@@ -57,10 +57,12 @@
         <div id="livepix">
             <figure>
                 <a href="https://livepix.gg/gswolf101" target="_blank" rel="noopener"><img src="imagens/img-teste.png" alt="Qrcode"></a>
-                <hr id="espaco">
+                <figcaption><hr id="espaco"></figcaption>
             </figure>
                 <p>Ajude o Wolf a melhorar o setup e trazer novos conteúdos para as lives e vídeos</p>
-             <!-- <iframe src="" frameborder="0"></iframe>  (widget da meta do livepix usar depois)-->
+             <!-- <iframe src="" frameborder="0"></iframe>  (widget da meta do livepix usar depois)-->   
+        </div>
+        <hr id="espaco">
         <br>
         <br>
         <br>
@@ -89,7 +91,6 @@
             <h2>E-mail</h2>
             <h3>gswolf101@gmail.com</h1>
         </div>
-        <hr>
     </div>
 
     <!-- BLOCO DIREITA 1 -->
