--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
         <hr id="espaco">
         <div id="livepix">
             <figure>
-                <a href="https://livepix.gg/gswolf101" target="_blank" rel="noopener"><img src="imagens/qrlivepix.jpg" alt="Qrcode"></a>
-            </figure>
+                <a href="https://livepix.gg/gswolf101" target="_blank" rel="noopener"><img src="imagens/img-teste.png" alt="Qrcode"></a>
                 <p>Ajude o Wolf a melhorar o setup e trazer novos conteúdos para as lives e vídeos</p>
-             <!-- <iframe src="" frameborder="0"></iframe>  (widget da meta do livepix usar depois)-->   
+            </figure>
         </div>
+        <hr id="espaco">
         <br>
         <br>
         <br>
