--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                 <a href="https://livepix.gg/gswolf101" target="_blank" rel="noopener"><img src="imagens/qrlivepix.jpg" alt="Qrcode"></a>
                 <p>Ajude o Wolf a melhorar o setup e trazer novos conteúdos para as lives e vídeos</p>
             </figure>
+            <iframe src="https://widget.livepix.gg/embed/fe7baa5e-fb3d-4ae4-97e9-6568524da756" frameborder="0">meta</iframe>
         </div>
         <hr id="espaco">
         <br>
