--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
         <!-- BLOCO ESQUERDA 1 -->
-    <iframe src="https://widget.livepix.gg/embed/fe7baa5e-fb3d-4ae4-97e9-6568524da756" frameborder="0" id="barrameta">meta</iframe>
+    <iframe src="https://widget.livepix.gg/embed/fe7baa5e-fb3d-4ae4-97e9-6568524da756" frameborder="0" id="barrameta style="width: 300px; height: 200px;">meta</iframe>
     <div id="esquerda1">
         <div id="meupc">
             <h2>Sobre o meu notebook</h2>
