--- a/Jogo.html
+++ b/Jogo.html
@@ -83,6 +83,6 @@
       </div>
     </div>
     
-    <script type="module" src="main.js"></script>
+    <script type="module" src="arquivosjogo/main.js"></script>
   </body>
 </html>
