--- a/Jogo.html
+++ b/Jogo.html
@@ -83,7 +83,7 @@
       </div>
     </div>
     
-    <script type="module" src="main.js"></script>
+    <script type="module" src="arquivojogo/main.js"></script>
     <script src="https://storage.googleapis.com/rosebud_staticfiles/ScriptsLoader-Universal.js"></script>
     <script src="https://storage.googleapis.com/rosebud_staticfiles/ChatManager.js"></script>
     <script src="https://storage.googleapis.com/rosebud_staticfiles/ImageGenerator.js"></script>
